<resources>
    <string name="app_name">Pocket Lab App</string>
    <string name="app_description">Click to open a browser.</string>
    <string name="app_version">Ver 0.2</string>
    <string name="select_protocol_file">Select Protocol File</string>
    <string name="select_file_button">Select your protocol</string>
    <string name="use_demo_button">Load demo protocol</string>
    <string name="start_protocol_button">Start</string>
    <string name="time_continue_text">Continue.</string>
    <string name="selected_protocol">Selected:</string>
    <string name="title_current_protocol">CURRENT PROTOCOL</string>
    <string name="label_selected_file">Selected file</string>
    <string name="label_protocol_prefix">Protocol:</string>
    <string name="label_participant_id">Participant ID</string>
    <string name="helper_participant_id">Used to label exported data files.</string>
    <string name="cd_clear_participant_id">Clear participant ID</string>
    <string name="label_selected_output_folder">Output folder</string>
    <string name="action_select_output_folder">Select Output Folder</string>
    <string name="toast_output_folder_set">Output folder updated.</string>
    <string name="toast_output_folder_cancelled">Folder selection was cancelled.</string>
    <string name="toast_output_folder_permission_denied">Could not access selected folder.</string>
    <string name="dialog_title_output_folder">Change output folder?</string>
    <string name="dialog_message_output_folder">The app will save exported data to the selected folder. Continue?</string>
    <string name="value_selected_folder">selected folder</string>
    <string name="toast_export_saved_single">Data saved to %1$s</string>
    <string name="toast_export_saved_multi">Data saved to:
%1$s</string>
    <string name="value_none">None</string>
    <string name="value_untitled_protocol">Untitled Protocol</string>
    <string name="action_start_study">Start Study</string>
    <string name="section_file">FILES</string>
    <string name="section_protocols">PROTOCOLS</string>
    <string name="action_load_protocol">Load Protocol File</string>
    <string name="action_save_protocol">Save Protocol</string>
    <string name="action_save_as_protocol">Save Protocol As...</string>
    <string name="action_select_resources_folder">Select Resources Folder</string>
    <string name="action_review_protocol">Protocol Editor</string>
    <string name="action_use_tutorial_protocol">Use Tutorial Protocol</string>
    <string name="action_use_demo_protocol">Use Demo Protocol</string>
    <string name="section_customization">CUSTOMIZATION</string>
    <string name="section_other">OTHER</string>
    <string name="action_layout">Layout</string>
    <string name="action_sounds">Sounds</string>
    <string name="action_manual">Manual</string>
    <string name="action_about">About</string>
    <string name="action_load">Load</string>
    <string name="action_save">Save</string>
    <string name="action_save_as">Save As</string>
    <string name="action_close">Close</string>
    <string name="action_search">Search</string>
    <string name="action_clear">Clear</string>
    <string name="action_prev">Prev</string>
    <string name="action_next">Next</string>
    <string name="action_export">Export</string>
    <string name="toggle_highlight_commands">Highlight Commands</string>
    <string name="toggle_split_commands">Split Commands</string>
    <string name="filter_everything">Show Everything</string>
    <string name="filter_hide_comments">Hide Comments</string>
    <string name="filter_errors_warnings">Show Only Errors &amp; Warnings</string>
    <string name="filter_errors_only">Show Only Errors</string>
    <string name="toast_protocol_loaded">Protocol loaded.</string>
    <string name="toast_loading_cancelled">Loading was cancelled.</string>
    <string name="toast_saved_new_file">Saved as new file.</string>
    <string name="toast_save_as_cancelled">Save As was cancelled.</string>
    <string name="toast_error_saving_file">Error saving file: %1$s</string>
    <string name="cd_prev_issue">Previous issue</string>
    <string name="cd_next_issue">Next issue</string>
    <string name="cd_load_protocol">Load protocol</string>
    <string name="cd_save_protocol">Save protocol</string>
    <string name="cd_save_as_protocol">Save protocol as new file</string>
    <string name="cd_close_dialog">Close dialog</string>
    <string name="cd_search_text">Search text</string>
    <string name="cd_clear_search">Clear search</string>
    <string name="action_add_command">Add</string>
    <string name="cd_add_command">Add new command</string>
    <string name="dialog_title_insert_command">Insert Command</string>
    <string name="label_select_command">Command</string>
    <string name="label_parameters">Parameters</string>
    <string name="hint_header">Header text</string>
    <string name="hint_body">Body text</string>
    <string name="label_media_section">Multimedia</string>
    <string name="hint_media_section">Optional sound, video, and custom HTML placeholders will be appended to the body text. Add pictures manually by typing &lt;image.jpg&gt; directly in the text.</string>
    <string name="hint_media_sound">Sound file (mp3/wav, optional volume e.g. sound.mp3,75)</string>
    <string name="hint_media_video">Video file (mp4, optional volume e.g. intro.mp4,60)</string>
    <string name="hint_media_custom_html">Custom HTML file (e.g. extra.html)</string>
    <string name="hint_continue">Continue button text</string>
    <string name="hint_items">Items (comma separated)</string>
    <string name="hint_time_seconds">Time (seconds)</string>
    <string name="hint_label_name">Label name</string>
    <string name="hint_goto_label">Target label</string>
    <string name="hint_filename">Filename</string>
    <string name="hint_message">Message</string>
    <string name="hint_input_fields">Input fields (comma separated)</string>
    <string name="hint_input_field_number">Field %1$d</string>
    <string name="hint_scale_item_number">Item %1$d</string>
    <string name="hint_scale_response_number">Response %1$d</string>
    <string name="hint_scale_response_label">Label target %1$d (optional)</string>
    <string name="label_hold_to_confirm">Require hold to continue</string>
    <string name="action_hold_label">[HOLD]</string>
    <string name="hint_hold_to_confirm">Adds [HOLD] to the continue button so participants must hold to advance.</string>
    <string name="cd_hold_toggle_on">Hold required to advance is on</string>
    <string name="cd_hold_toggle_off">Hold required to advance is off</string>
    <string name="label_randomize_order">Randomize order</string>
    <string name="hint_randomize_scale">Shuffles the order of scale items for participants.</string>
    <string name="hint_randomize_inputfields">Shuffles the order of input fields shown to participants.</string>
    <string name="cd_randomize_toggle_on">Randomize order is on</string>
    <string name="cd_randomize_toggle_off">Randomize order is off</string>
    <string name="cd_toggle_scale_response_branch">Toggle branching target</string>
    <string name="hint_scale_branching_helper">Branch this response to a label destination.</string>
    <string name="tip_scale_response_branch_add">Link this response to a label</string>
    <string name="tip_scale_response_branch_remove">Remove branching for this response</string>
    <string name="hint_color_value">Color (e.g. #FF0000)</string>
    <string name="hint_size_value">Size (number)</string>
    <string name="hint_alignment_value">Alignment (LEFT|CENTER|RIGHT)</string>
    <string name="hint_study_id_value">Study ID</string>
    <string name="hint_transitions_mode">Transitions mode (off|slide|slideleft|fade|dissolve)</string>
    <string name="hint_value">Value</string>
    <string name="insert_command_selection_hint">Browse categories or search to find the command you need.</string>
    <string name="insert_command_edit_locked_hint">Command type is locked while editing this line.</string>
    <string name="insert_command_parameters_hint">Fill in or update the values below.</string>
    <string name="insert_command_no_parameters_hint">This command does not require additional parameters.</string>
    <string name="insert_command_choose_command_hint">Select a command to see available parameters.</string>
    <string name="protocol_name_tutorial">Tutorial Protocol</string>
    <string name="protocol_name_demo">Demo protocol</string>
    <string name="label_scale_items">Items</string>
    <string name="label_scale_responses">Responses</string>
    <string name="label_inputfield_fields">Input fields</string>
    <string name="toast_command_inserted">Command inserted</string>
    <string name="toast_insert_cancelled">Insert cancelled</string>
    <string name="toast_long_press_insert">Long-press a line to insert below it</string>
    <string name="error_required_field">Required</string>
    <string name="error_media_not_supported">This command does not support multimedia placeholders.</string>
    <string name="error_media_sound_extension">Sound must use .mp3 or .wav.</string>
    <string name="error_media_video_extension">Video must use .mp4.</string>
    <string name="error_media_html_extension">Custom HTML must end with .html.</string>
    <string name="hint_search_keyword">Keyword</string>
    <string name="action_search_text">Search</string>
    <string name="action_clear_text">Clear</string>
    <string name="label_summary_counts">Lines: %1$d  |  Errors: %2$d  |  Warnings: %3$d</string>
    <string name="toast_no_issues">No issues</string>
    <string name="action_update_command">Update</string>
    <string name="toast_command_updated">Command updated</string>
    <string name="error_unrecognized_command_title">Unrecognized Command</string>
    <string name="error_unrecognized_command_message">This line cannot be edited with the structured dialog because the command keyword is not recognized. You can edit the raw line instead.</string>
    <string name="action_edit_raw_line">Edit Raw Line</string>
    <string name="action_new_protocol">New</string>
    <string name="cd_new_protocol">Create new protocol</string>
    <string name="dialog_title_new_protocol">New Protocol</string>
    <string name="dialog_message_new_protocol_unsaved">You have unsaved changes. Do you want to save the current protocol before creating a new one?</string>
    <string name="toast_new_protocol_created">New protocol created</string>
    <string name="dialog_resume_protocol_title">Resume protocol?</string>
    <string name="dialog_resume_protocol_message">It looks like a protocol run was interrupted. Do you want to continue where you left off?</string>
    <string name="dialog_resume_protocol_continue">Continue where you left off</string>
    <string name="dialog_resume_protocol_start_over">Don\u2019t continue</string>
    <string name="action_delete_command">Delete</string>
    <string name="toast_command_deleted">Command deleted</string>
    <string name="action_move_up">Move Up</string>
    <string name="action_move_down">Move Down</string>
    <string name="toast_command_moved">Command moved</string>
    <string name="toast_move_blocked">Cannot move further</string>
    <string name="action_undo">Undo</string>
    <string name="cd_undo">Undo last change</string>
    <string name="toast_undo_none">Nothing to undo</string>
    <string name="toast_undo_done">Reverted last change</string>
    <string name="action_redo">Redo</string>
    <string name="cd_redo">Redo last undone change</string>
    <string name="toast_redo_none">Nothing to redo</string>
    <string name="toast_redo_done">Reapplied change</string>
    <string name="toast_drag_disabled">Drag disabled while search or filters active</string>
    <string name="cd_drag_handle">Drag to reorder</string>
    <string name="cd_increase_text_size">Increase text size</string>
</resources>