<!-- Filename: fragment_start.xml -->
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    android:fillViewport="true">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/app_name"
            android:textSize="34sp"
            android:textStyle="bold"
            android:layout_marginBottom="4dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/app_version"
            android:textSize="12sp"
            android:layout_marginBottom="24dp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="Selected:"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/tvSelectedProtocolName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="Selected protocol:None"
            android:textSize="16sp"
            android:textStyle="bold"
            android:layout_marginBottom="8dp" />

        <Button
            android:id="@+id/btnShowProtocolContent"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:text="Show Protocol Content" />

        <Button
            android:id="@+id/btnStart"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/start_protocol_button"
            android:textSize="24sp"
            android:textStyle="bold"
            android:layout_marginBottom="36dp" />

        <Button
            android:id="@+id/btnSelectFile"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/select_file_button"
            android:layout_marginBottom="8dp" />

        <Button
            android:id="@+id/btnUseDemo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/use_demo_button"
            android:layout_marginBottom="8dp" />

        <Button
            android:id="@+id/btnUseTutorial"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:text="Load Tutorial Protocol" />

        <Button
            android:id="@+id/btnSelectResourcesFolder"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Select Resources Folder"
            android:layout_marginBottom="32dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:text="-- Customization --"
            android:textStyle="bold"
            android:textSize="16sp" />

        <Button
            android:id="@+id/btnColorsAndSizes"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Colors and sizes"
            android:layout_marginBottom="8dp" />

        <Button
            android:id="@+id/btnAlarm"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Alarm"
            android:layout_marginBottom="36dp" />

        <Button
            android:id="@+id/btnProtocolValidation"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Protocol Validation"
            android:layout_marginBottom="36dp" />

        <Button
            android:id="@+id/btnShowAbout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Show About"
            android:layout_marginBottom="16dp" />

    </LinearLayout>
</ScrollView>
